fix(webapp): preserve mutable text unit search results